Bug 233667 - [patch] top(1): Add missing display messages when toggling modes
Summary: [patch] top(1): Add missing display messages when toggling modes
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 12.0-STABLE
Hardware: Any Any
: --- Affects Some People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-30 17:09 UTC by James Wright
Modified: 2018-12-07 15:49 UTC (History)
0 users

See Also:


Attachments
Patch file (997 bytes, patch)
2018-11-30 17:09 UTC, James Wright
no flags Details | Diff
patch (1010 bytes, patch)
2018-11-30 17:58 UTC, James Wright
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description James Wright 2018-11-30 17:09:13 UTC
Created attachment 199688 [details]
Patch file

The top(1) utility is missing display messages when toggling between some modes.

Attached a patch to add the missing messages;

m : "Displaying IO stats" / "Displaying CPU stats"
S: "Displaying system processes" / "Not displaying system processes"
a: "Displaying process args" / "Not displaying process args"

Phabricator: https://reviews.freebsd.org/D18331
Comment 1 James Wright 2018-11-30 17:58:51 UTC
Created attachment 199690 [details]
patch
Comment 2 commit-hook freebsd_committer freebsd_triage 2018-11-30 18:03:49 UTC
A commit references this bug:

Author: markj
Date: Fri Nov 30 18:02:59 UTC 2018
New revision: 341346
URL: https://svnweb.freebsd.org/changeset/base/341346

Log:
  Add missing display messages when toggling modes.

  PR:		233667
  Submitted by:	James Wright <james.wright@jigsawdesign.com>
  MFC after:	1 week
  Differential Revision:	https://reviews.freebsd.org/D18331

Changes:
  head/usr.bin/top/top.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2018-12-07 15:49:17 UTC
A commit references this bug:

Author: markj
Date: Fri Dec  7 15:48:42 UTC 2018
New revision: 341691
URL: https://svnweb.freebsd.org/changeset/base/341691

Log:
  MFC r341346:
  Add missing display messages when toggling modes.

  PR:	233667

Changes:
_U  stable/12/
  stable/12/usr.bin/top/top.c