MFC r341346: Add missing display messages when toggling modes.

PR:	233667